<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:gravity="center"
                android:text="@string/titre"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold|normal|italic" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="38dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="38dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/repas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="25dp">


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/entree"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:hintTextColor="#4E4A4A"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/entree"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="text"
                                android:textColor="@color/black"
                                android:textSize="13sp"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/plat_principal"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:hintTextColor="#4E4A4A"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/plat_principal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="text"
                                android:textColor="@color/black"
                                android:textSize="13sp"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <CheckBox
                                android:id="@+id/checkbox_meat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="#4E4A4A"
                                android:text="@string/fromage" />

                            <CheckBox
                                android:id="@+id/checkbox_cheese"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="#4E4A4A"
                                android:text="@string/fruit" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/radio_group"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">


                            <RadioButton
                                android:id="@+id/midi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="#4E4A4A"
                                android:text="@string/midi" />


                            <RadioButton
                                android:id="@+id/soir"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:buttonTint="#4E4A4A"
                                android:text="@string/soir" />

                        </RadioGroup>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_valider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/valider"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="17sp"
                        app:backgroundTint="@color/pinkColor"
                        app:shapeAppearanceOverlay="@style/Button5" />

                    <Button
                        android:id="@+id/btn_annuler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="25dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:text="@string/annuler"
                        android:textAllCaps="false"
                        android:textColor="@color/pinkColor"
                        android:textSize="17sp"
                        app:backgroundTint="@color/white"
                        app:shapeAppearanceOverlay="@style/Button5" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>